--- a/cardapio/templates/index.html
+++ b/cardapio/templates/index.html
@@ -46,7 +46,7 @@
 {#                                <option value="{{ categoria.nome }}">{{ categoria.nome|upper }}</option>#}
 {#                            {% endfor %}#}
 {#                        </select>#}
-                        <input type="text" id="id_busca" name="busca" class="form-control" placeholder="Digite nome do prato">
+                        <input type="text" id="id_busca" name="busca" class="form-control" placeholder="Digite nome ou categoria">
                     </div>
                     <button type="submit" class="btn btn-default">BUSCAR</button>
                 </form>
